--- a/ft-source-grid-item.html
+++ b/ft-source-grid-item.html
@@ -1,10 +1,28 @@
+<!--
+Copyright 2017 FileThis, Inc.
+
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+
+    http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
+-->
+
+
 <link rel="import" href="../polymer/polymer.html">
 
 <link rel="import" href="../iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="../iron-label/iron-label.html">
 
 <!--
 `ft-source-grid-item`
-An element that renders a FileThis source in a grid list.
+An element that renders a FileThis source thumbnail in a grid list.
 
 @demo demo/index.html
 -->
@@ -15,8 +33,50 @@ An element that renders a FileThis source in a grid list.
 
     <template>
 
-        <div>
-            ft-source-grid-item
+        <div id="interior" class="layout vertical center"
+             style="padding-left:15px; padding-top:15px; padding-right:15px;">
+
+            <!-- Logo Box -->
+            <div class="layout vertical center"
+                 on-click="_onSourceClicked"
+                 style="width:150px; height:65px;
+                    border:1px solid #DEDEDE;
+                    justify-content:center;
+                    cursor:pointer;">
+
+                <!-- Logo -->
+                <img
+                    style="width:auto; max-width:100%;"
+                    src="[[source.logoUrl]]">
+                </img>
+
+            </div>
+
+            <!-- "Connect" -->
+            <div on-click="_onSourceClicked"
+                 style="font-family:Arial; font-size:15px;
+                    color:#7D7D7D;
+                    width:150px;
+                    background-color:#FAFAFA;
+                    text-align:center;
+                    padding-top:4px; padding-bottom:6px;
+                    border-left:1px solid #DEDEDE; border-right:1px solid #DEDEDE; border-bottom:1px solid #DEDEDE;
+                    cursor:pointer;">
+                Connect
+            </div>
+
+            <!-- Name -->
+            <div on-click="_onSourceClicked"
+                 style="font-family:Arial;
+                    color:#343434;
+                    width:150px;
+                    padding-top:8px;
+                    text-align:center;
+                    text-overflow:ellipsis; white-space: nowrap; overflow: hidden;
+                    cursor:pointer;">
+                [[source.name]]
+            </div>
+
         </div>
 
     </template>
@@ -26,7 +86,43 @@ An element that renders a FileThis source in a grid list.
 
             is: 'ft-source-grid-item',
 
+            /**
+             * Fired when a source is clicked to connect to it.
+             *
+             * @event connect
+             * @param {Object} detail The selected source.
+             */
+
             properties: {
+
+                /** The source resource to be displayed. */
+                source: {
+                    type: Object,
+                    notify: true,
+                    value: null
+                },
+
+                /** Whether the source item should appear selected, or not. */
+                selected: {
+                    type: Boolean,
+                    notify: true,
+                    value: false,
+                    observer: "_onSelectedChanged"
+                }
+            },
+
+            _onSourceClicked: function(event, detail)
+            {
+                this.fire('connect', this.source);
+            },
+
+            _onSelectedChanged: function()
+            {
+                var interior = this.$.interior;
+                if (this.selected)
+                    interior.style.backgroundColor = "#F6F6F6";
+                else
+                    interior.style.backgroundColor = "#FFFFFF";
             }
 
         });
