--- a/ft-source-grid-item.html
+++ b/ft-source-grid-item.html
@@ -29,7 +29,7 @@ An element that renders a FileThis source thumbnail in a grid list.
 
 <dom-module id="ft-source-grid-item">
 
-    <style include="iron-flex iron-flex-alignment"></style>
+    <style include="iron-flex iron-flex-alignment iron-positioning"></style>
 
     <template>
 
