--- a/ft-source-grid-item.html
+++ b/ft-source-grid-item.html
@@ -33,6 +33,12 @@ An element that renders a FileThis source thumbnail in a grid list.
 
     <template>
 
+        <style>
+            :host {
+                display:block;
+            }
+        </style>
+
         <div id="interior" class="layout vertical center"
              style="padding-left:15px; padding-top:15px; padding-right:15px;">
 
