--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -36,6 +36,12 @@ An element that renders information about a FileThis source in a parent grid
 
     <template>
 
+        <style>
+            :host {
+                display:block;
+            }
+        </style>
+
         <div class="layout vertical center">
 
             <!-- Normal -->
