--- a/ft-source-grid-item.html
+++ b/ft-source-grid-item.html
@@ -41,11 +41,11 @@ An element that renders a FileThis source thumbnail in a grid list.
 
         <div id="interior" class="layout vertical center"
              style="padding-left:15px; padding-top:15px; padding-right:15px;"
-             on-click="_ignoreClick">
+             on-tap="_ignoreClick">
 
             <!-- Logo Box -->
             <div class="layout vertical center"
-                 on-click="_onSourceClicked"
+                 on-tap="_onSourceClicked"
                  style="width:150px; height:65px;
                     border:1px solid #DEDEDE;
                     justify-content:center;
@@ -60,7 +60,7 @@ An element that renders a FileThis source thumbnail in a grid list.
             </div>
 
             <!-- Name -->
-            <div on-click="_onSourceClicked"
+            <div on-tap="_onSourceClicked"
                  style="font-family:Arial;
                     color:#343434;
                     width:150px;
