--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -28,7 +28,7 @@ limitations under the License.
 
 An element that renders information about a FileThis source in a parent grid
 
-@demo demo/index.html
+@demo
  -->
 <dom-module id="demo-fixture">
 
