--- a/ft-source-grid-item.html
+++ b/ft-source-grid-item.html
@@ -20,12 +20,12 @@ limitations under the License.
 <link rel="import" href="../polymer/polymer.html">
 
 <!--
-`ft-source-grid-item`
-An element that renders a FileThis source thumbnail in a grid list.
+`<ft-source-grid-item>`
 
-@demo demo/index.html
+This element displays a single FileThis document source, suitable for use in grid of other sources.
+
+@demo
 -->
-
 <dom-module id="ft-source-grid-item">
 
     <template>
