--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -18,9 +18,9 @@ limitations under the License.
 <!-- ft-source-list-item element demo -->
 
 <!-- Imports -->
-<link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../../ft-element-demo/ft-element-demo.html">
 <link rel="import" href="../../iron-flex-layout/iron-flex-layout-classes.html">
-
+<link rel="import" href="../../polymer/polymer.html">
 <link rel="import" href="../ft-source-grid-item.html">
 
 
@@ -42,25 +42,24 @@ An element that renders information about a FileThis source in a parent grid
             }
         </style>
 
-        <div class="layout vertical center">
+        <ft-element-demo
+                style="width:100%; height:100%; ">
 
-            <!-- Normal -->
-            <div class="layout horizontal center">
-                <div style="width:115px; font-size:14pt" align="right">Normal:</div>
-                <div style="width:35px;"></div>
+            <div
+                    slot="element"
+                    class="layout vertical center">
+
+                <!-- Normal -->
                 <ft-source-grid-item id="normal"></ft-source-grid-item>
-            </div>
 
-            <div style="height:25px;"></div>
+                <div style="height:25px;"></div>
 
-            <!-- Selected -->
-            <div class="layout horizontal center">
-                <div style="width:115px; font-size:14pt" align="right">Selected:</div>
-                <div style="width:35px;"></div>
+                <!-- Selected -->
                 <ft-source-grid-item id="selected"></ft-source-grid-item>
+
             </div>
 
-        </div>
+        </ft-element-demo>
 
     </template>
 
