--- a/ft-source-grid-item.html
+++ b/ft-source-grid-item.html
@@ -35,6 +35,7 @@ This element displays a single FileThis document source, suitable for use in gri
         <style>
             :host {
                 display:block;
+                @apply --ft-source-grid-item;
             }
         </style>
 
