--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -43,6 +43,7 @@ An element that renders information about a FileThis source in a parent grid
         </style>
 
         <ft-element-demo
+                name="ft-source-grid-item"
                 style="width:100%; height:100%; ">
 
             <div
