--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -47,7 +47,7 @@ An element that renders information about a FileThis source in a parent grid
                 style="width:100%; height:100%; ">
 
             <div
-                    slot="element"
+                    slot="instance"
                     class="layout vertical center">
 
                 <!-- Normal -->
