--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -39,6 +39,7 @@ An element that renders information about a FileThis source in a parent grid
         <style>
             :host {
                 display:block;
+                overflow:hidden;
             }
         </style>
 
