--- a/ft-source-grid-item.html
+++ b/ft-source-grid-item.html
@@ -108,7 +108,7 @@ This element displays a single FileThis document source, suitable for use in gri
 
             _onSourceClicked: function(event, detail)
             {
-                this.fire('connect', this.source);
+                this.fire('connect-command', this.source);
             },
 
             _onSelectedChanged: function(to, from)
