--- a/ft-source-grid-item.html
+++ b/ft-source-grid-item.html
@@ -106,6 +106,7 @@ This element displays a single FileThis document source, suitable for use in gri
         <iron-icon
             id="identifyButton"
             icon="visibility"
+            hidden="true"
             on-tap="_onIdentifyButtonClicked"
             on-mouseover="_onMouseEnterIdentifyButton"
             on-mouseout="_onMouseLeaveIdentifyButton"
