--- a/ft-source-grid-item.html
+++ b/ft-source-grid-item.html
@@ -38,11 +38,50 @@ This element displays a single FileThis document source, suitable for use in gri
 
         <style>
             :host {
-                display:block;
-                overflow:hidden;
+                display: block;
+                overflow: hidden;
                 position:relative;
+                width: 182px;
+                height: 115px;
                 @apply --ft-source-grid-item;
-                width:182px; height:115px;
+            }
+            .interior {
+                position:absolute;
+                z-index:1;
+                padding-left: 15px;
+                padding-top: 15px;
+                padding-right: 15px;
+                @apply --ft-source-grid-item-interior;
+            }
+            .logo-box {
+                width: 150px;
+                height: 65px;
+                border: 1px solid #DEDEDE;
+                justify-content:center;
+                cursor:pointer;
+                @apply --ft-source-grid-item-logo-box;
+            }
+            .name {
+                font-family: Arial, Helvetica, sans-serif;
+                color: #343434;
+                width: 150px;
+                height: 20px;
+                padding-top: 8px;
+                text-align:center;
+                text-overflow:ellipsis;
+                white-space:nowrap;
+                overflow: hidden;
+                cursor:pointer;
+                @apply --ft-source-grid-item-name;
+            }
+            .identify-button {
+                position:absolute;
+                z-index:2;
+                right:21px; top:18px;
+                width: 20px; height: 20px;
+                display: none;
+                cursor:pointer;
+                @apply --ft-source-grid-item-identify-button;
             }
             .icon-normal
             {
@@ -57,24 +96,13 @@ This element displays a single FileThis document source, suitable for use in gri
         <!-- Main content -->
         <div
             id="interior"
-            class="layout vertical center"
-            style="
-                position:absolute;
-                z-index:1;
-                padding-left:15px; padding-top:15px; padding-right:15px;
-                "
+            class="interior layout vertical center"
             on-tap="_ignoreClick"
         >
             <!-- Logo Box -->
             <div
-                class="layout vertical center"
+                class="logo-box layout vertical center"
                 on-tap="_onSourceClicked"
-                style="
-                    width:150px; height:65px;
-                    border:1px solid #DEDEDE;
-                    justify-content:center;
-                    cursor:pointer;
-                "
             >
                 <!-- Logo -->
                 <img
@@ -85,19 +113,7 @@ This element displays a single FileThis document source, suitable for use in gri
             </div>
 
             <!-- Name -->
-            <div on-tap="_onSourceClicked"
-                style="
-                    font-family:Arial;
-                    color:#343434;
-                    width:150px; height:20px;
-                    padding-top:8px;
-                    text-align:center;
-                    text-overflow:ellipsis;
-                    white-space:nowrap;
-                    overflow:hidden;
-                    cursor:pointer;
-                   "
-            >
+            <div on-tap="_onSourceClicked" class="name">
                 [[source.name]]
             </div>
         </div>
@@ -110,15 +126,7 @@ This element displays a single FileThis document source, suitable for use in gri
             on-tap="_onIdentifyButtonClicked"
             on-mouseover="_onMouseEnterIdentifyButton"
             on-mouseout="_onMouseLeaveIdentifyButton"
-            class="icon-normal"
-            style="
-                position:absolute;
-                z-index:2;
-                right:21px; top:18px;
-                width:20px; height:20px;
-                display:none;
-                cursor:pointer;
-                "
+            class="identify-button icon-normal"
         >
         </iron-icon>
 
