--- a/ft-source-grid-item-settings-behavior.html
+++ b/ft-source-grid-item-settings-behavior.html
@@ -48,7 +48,7 @@ limitations under the License.
              */
             showIdentifyButton: {
                 type: Object,
-                value: true
+                value: false
             },
 
         },
