--- a/ft-source-grid-item.html
+++ b/ft-source-grid-item.html
@@ -45,7 +45,7 @@ This element displays a single FileThis document source, suitable for use in gri
                 height: 115px;
                 @apply --ft-source-grid-item;
             }
-            .interior {
+            #interior {
                 position:absolute;
                 z-index:1;
                 padding-left: 15px;
@@ -53,7 +53,7 @@ This element displays a single FileThis document source, suitable for use in gri
                 padding-right: 15px;
                 @apply --ft-source-grid-item-interior;
             }
-            .logo-box {
+            #logoBox {
                 width: 150px;
                 height: 65px;
                 border: 1px solid #DEDEDE;
@@ -61,7 +61,7 @@ This element displays a single FileThis document source, suitable for use in gri
                 cursor:pointer;
                 @apply --ft-source-grid-item-logo-box;
             }
-            .name {
+            #name {
                 font-family: Arial, Helvetica, sans-serif;
                 color: #343434;
                 width: 150px;
@@ -74,7 +74,7 @@ This element displays a single FileThis document source, suitable for use in gri
                 cursor:pointer;
                 @apply --ft-source-grid-item-name;
             }
-            .identify-button {
+            #identifyButton {
                 position:absolute;
                 z-index:2;
                 right:21px; top:18px;
@@ -86,22 +86,25 @@ This element displays a single FileThis document source, suitable for use in gri
             .icon-normal
             {
                 --iron-icon-fill-color:#DDD;
+                @apply --ft-source-grid-item-icon-normal;
             }
             .icon-highlighted
             {
                 --iron-icon-fill-color:black;
+                @apply --ft-source-grid-item-icon-highlighted;
             }
         </style>
 
         <!-- Main content -->
         <div
             id="interior"
-            class="interior layout vertical center"
+            class="layout vertical center"
             on-tap="_ignoreClick"
         >
             <!-- Logo Box -->
             <div
-                class="logo-box layout vertical center"
+                id="logoBox"
+                class="layout vertical center"
                 on-tap="_onSourceClicked"
             >
                 <!-- Logo -->
@@ -113,7 +116,10 @@ This element displays a single FileThis document source, suitable for use in gri
             </div>
 
             <!-- Name -->
-            <div on-tap="_onSourceClicked" class="name">
+            <div
+                id="name"
+                on-tap="_onSourceClicked"
+            >
                 [[source.name]]
             </div>
         </div>
@@ -121,14 +127,24 @@ This element displays a single FileThis document source, suitable for use in gri
         <!-- Identify button -->
         <iron-icon
             id="identifyButton"
+            class="icon-normal"
             icon="visibility"
-            hidden="[[!showIdentifyButton]]"
+            hidden="true"
             on-tap="_onIdentifyButtonClicked"
             on-mouseover="_onMouseEnterIdentifyButton"
             on-mouseout="_onMouseLeaveIdentifyButton"
-            class="identify-button icon-normal"
         >
         </iron-icon>
+        <!--<iron-icon-->
+            <!--id="identifyButton"-->
+            <!--class="icon-normal"-->
+            <!--icon="visibility"-->
+            <!--hidden="[[!showIdentifyButton]]"-->
+            <!--on-tap="_onIdentifyButtonClicked"-->
+            <!--on-mouseover="_onMouseEnterIdentifyButton"-->
+            <!--on-mouseout="_onMouseLeaveIdentifyButton"-->
+        <!--&gt;-->
+        <!--</iron-icon>-->
 
         <paper-tooltip
             for="identifyButton"
