--- a/ft-source-grid-item-settings.html
+++ b/ft-source-grid-item-settings.html
@@ -46,7 +46,7 @@ Settings applied to the ft-source-grid-item.
 
             _initializeSettings: function()
             {
-                window.FileThis.FtGlobalVariable.propagateValue("ft-source-grid-item-allow-manual-fetch", this.showIdentifyButton);
+                window.FileThis.FtGlobalVariables.propagateValue("ft-source-grid-item-allow-manual-fetch", this.showIdentifyButton);
             },
 
         });
