--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -22,6 +22,8 @@ limitations under the License.
 <link rel="import" href="../../iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../../polymer/polymer.html">
 <link rel="import" href="../ft-source-grid-item.html">
+<link rel="import" href="../ft-source-grid-item-settings.html">
+<link rel="import" href="ft-source-grid-item-settings-editor.html">
 
 
 <!--
@@ -43,21 +45,45 @@ An element that renders information about a FileThis source in a parent grid
             }
         </style>
 
+        <!-- Set a couple settings -->
+        <ft-source-grid-item-settings
+            ft-source-grid-item-show-identify-button=true
+        >
+        </ft-source-grid-item-settings>
+
         <ft-element-demo
-                name="ft-source-grid-item"
-                style="width:100%; height: 100%; ">
+            name="ft-source-grid-item"
+            show-config="true"
+            style="width:100%; height: 100%; "
+        >
+            <!-- Settings -->
+            <ft-source-grid-item-settings-editor
+                id="settings"
+                slot="config"
+                style="padding:20px; "
+                ft-source-grid-item-show-identify-button="{{ftSourceGridItemShowIdentifyButton}}"
+            >
+            </ft-source-grid-item-settings-editor>
 
             <div
-                    slot="instance"
-                    class="layout vertical center">
-
+                slot="instance"
+                class="layout vertical center"
+            >
                 <!-- Normal -->
-                <ft-source-grid-item id="normal"></ft-source-grid-item>
+                <ft-source-grid-item
+                    id="normal"
+                    ft-source-grid-item-show-identify-button="{{ftSourceGridItemShowIdentifyButton}}"
+                >
+                </ft-source-grid-item>
 
                 <div style="height:25px;"></div>
 
                 <!-- Selected -->
-                <ft-source-grid-item id="selected"></ft-source-grid-item>
+                <ft-source-grid-item
+                    id="selected"
+                    ft-source-grid-item-show-identify-button="{{ftSourceGridItemShowIdentifyButton}}"
+                >
+                </ft-source-grid-item>
 
             </div>
 
