--- a/ft-source-grid-item.html
+++ b/ft-source-grid-item.html
@@ -22,6 +22,7 @@ limitations under the License.
 <link rel="import" href="../neon-animation/web-animations.html">
 <link rel="import" href="../paper-tooltip/paper-tooltip.html">
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="ft-source-grid-item-settings-behavior.html">
 
 <!--
 `<ft-source-grid-item>`
@@ -139,7 +140,7 @@ This element displays a single FileThis document source, suitable for use in gri
             <!--id="identifyButton"-->
             <!--class="icon-normal"-->
             <!--icon="visibility"-->
-            <!--hidden="[[!showIdentifyButton]]"-->
+            <!--hidden="[[!ftSourceGridItemShowIdentifyButton]]"-->
             <!--on-tap="_onIdentifyButtonClicked"-->
             <!--on-mouseover="_onMouseEnterIdentifyButton"-->
             <!--on-mouseout="_onMouseLeaveIdentifyButton"-->
@@ -153,15 +154,14 @@ This element displays a single FileThis document source, suitable for use in gri
             Identify website
         </paper-tooltip>
 
-        <!-- Settings -->
-        <ft-global-variable name="ft-source-grid-item-show-identify-button" value="{{showIdentifyButton}}"></ft-global-variable>
-
     </template>
 
     <script>
         Polymer({
 
             is: 'ft-source-grid-item',
+
+            behaviors: [FileThis.SourceGridItemSettingsBehavior],
 
             listeners: {
                 mouseenter: '_onMouseEnterHost',
@@ -181,7 +181,23 @@ This element displays a single FileThis document source, suitable for use in gri
                 source: {
                     type: Object,
                     notify: true,
-                    value: null
+                    value:
+                        {
+                            id: 1,
+                            name: "Untitled",
+                            type: "util",
+                            state: "live",
+                            homePageUrl: "https://filethis.com",
+                            phone: "(800) 266-2278",
+                            logoPath: "logos/Logo_FileThisHosted.png",
+                            logo: "Logo_FileThisHosted.png",
+                            logoUrl: "https://filethis.com/static/logos/72/Logo_FileThisHosted.png",
+                            note: "",
+                            info: "",
+                            pattern: "",
+                            isNew: false,
+                            isPopular: true
+                        }
                 },
 
                 /** Whether the source item should appear selected, or not. */
