--- a/ft-source-grid-item-settings-behavior.html
+++ b/ft-source-grid-item-settings-behavior.html
@@ -54,9 +54,12 @@ limitations under the License.
 
         },
 
-        ready: function()
+        attached: function()
         {
-            this._applySettings();
+            this.async(function()
+            {
+                this._applySettings();
+            });
         },
 
         _applySettings: function()
@@ -82,12 +85,12 @@ limitations under the License.
             if (!this._hasSettings())
                 return "";
 
-            var settings = "\n<ft-source-grid-item-settings";
+            var settings = "<ft-source-grid-item-settings";
 
             // Keep alphabetized
             settings += this._buildSettingAttribute("ft-source-grid-item-show-identify-button", "false");
 
-            settings += ">\n</ft-source-grid-item-settings\n";
+            settings += ">\n</ft-source-grid-item-settings>\n";
 
             return settings;
         },
