--- a/ft-source-grid-item-settings.html
+++ b/ft-source-grid-item-settings.html
@@ -16,9 +16,9 @@ limitations under the License.
 
 
 <!-- Imports -->
+<link rel="import" href="../ft-source-grid-item/ft-source-grid-item-settings-behavior.html">
 <link rel="import" href="../iron-meta/iron-meta.html">
 <link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="ft-source-grid-item-settings-behavior.html">
 
 
 <dom-module id="ft-source-grid-item-settings">
