--- a/ft-source-grid-item.html
+++ b/ft-source-grid-item.html
@@ -16,13 +16,13 @@ limitations under the License.
 
 
 <link rel="import" href="../ft-http-behavior/ft-http-behavior.html">
+<link rel="import" href="../ft-source-grid-item/ft-source-grid-item-settings-behavior.html">
 <link rel="import" href="../iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../iron-icon/iron-icon.html">
 <link rel="import" href="../iron-label/iron-label.html">
 <link rel="import" href="../neon-animation/web-animations.html">
 <link rel="import" href="../paper-tooltip/paper-tooltip.html">
 <link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="ft-source-grid-item-settings-behavior.html">
 
 <!--
 `<ft-source-grid-item>`
