--- a/ft-source-grid-item-settings-behavior.html
+++ b/ft-source-grid-item-settings-behavior.html
@@ -75,6 +75,16 @@ limitations under the License.
             this.fire("internal-settings-changed");
         },
 
+        generateSettingsImport: function(indent)
+        {
+            if (!this.hasSettings())
+                return "";
+
+            var theImport = indent + "<link rel=\"import\" href=\"https://connect.filethis.com/{{RELEASE_VERSION}}/ft-source-grid-item/ft-source-grid-item-settings.html\">\n";
+
+            return theImport;
+        },
+
         generateSettingsElement: function(indent)
         {
             if (!this.hasSettings())
