--- a/test/ft-source-grid-item_test.html
+++ b/test/ft-source-grid-item_test.html
@@ -6,10 +6,10 @@
 
     <title>ft-source-grid-item Test</title>
 
-    <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-    <script src="../../web-component-tester/browser.js"></script>
+    <script src="../../@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
+    <script src="../../wct-browser-legacy/browser.js"></script>
 
-    <link rel="import" href="../ft-source-grid-item.html">
+    <script type="module" src="../ft-source-grid-item.js"></script>
 </head>
 <body>
 <test-fixture id="basic">
@@ -18,15 +18,16 @@
     </template>
 </test-fixture>
 
-<script>
-    suite('ft-source-grid-item', function()
+<script type="module">
+import '../ft-source-grid-item.js';
+suite('ft-source-grid-item', function()
+{
+    test('instantiating the element works', function()
     {
-        test('instantiating the element works', function()
-        {
-            var element = fixture('basic');
-            assert.equal(element.is, 'ft-source-grid-item');
-        });
+        var element = fixture('basic');
+        assert.equal(element.is, 'ft-source-grid-item');
     });
+});
 </script>
 </body>
 </html>
